// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationshiptable component should render a list of residents 1`] = `
<DocumentFragment>
  <table
    class="govuk-table lbh-table"
    data-testid="residents-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Select
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Client Name
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Address
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date of birth
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="1"
              name="personId"
              type="radio"
              value="1"
            />
            <label
              class="govuk-label govuk-radios__label"
            >
              <span
                class="govuk-visually-hidden"
              >
                Foo Bar
              </span>
            </label>
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          1
        </td>
        <td
          class="govuk-table__cell"
        >
          <label
            for="1"
          >
            Foo Bar
          </label>
        </td>
        <td
          class="govuk-table__cell"
        >
          <span>
            hdsadjk
          </span>
        </td>
        <td
          class="govuk-table__cell"
        >
          13/11/2020
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Relationshiptable component should render a resident without a postcode 1`] = `
<DocumentFragment>
  <table
    class="govuk-table lbh-table"
    data-testid="residents-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Select
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          ID
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Client Name
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Address
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date of birth
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <td
          class="govuk-table__cell"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              id="2"
              name="personId"
              type="radio"
              value="2"
            />
            <label
              class="govuk-label govuk-radios__label"
            >
              <span
                class="govuk-visually-hidden"
              >
                Foo Bar
              </span>
            </label>
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          2
        </td>
        <td
          class="govuk-table__cell"
        >
          <label
            for="2"
          >
            Foo Bar
          </label>
        </td>
        <td
          class="govuk-table__cell"
        >
          <span />
        </td>
        <td
          class="govuk-table__cell"
        >
          13/11/2020
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
